--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>TechStore - Toko Elektronik Online Terpercaya</title>
-   <link rel="stylesheet" href="style.sss">
+   <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
    <header class="header">
@@ -45,7 +46,7 @@
                   
                    <div class="products-grid">
                        <article class="product-card clearfix">
-                           <img src="https://via.placeholder.com/120x120/3498db/ffffff?text=💻" alt="Laptop Gaming" class="product-image">
+                           <img src="photos/asus rog strix g15 bios setup.jpg" alt="Laptop Gaming" class="product-image">
                            <h3>Laptop Gaming ROG</h3>
                            <p>Laptop gaming performa tinggi dengan processor Intel i7 dan VGA RTX 4060 untuk pengalaman gaming terbaik.</p>
                            <div class="price">Rp 18.500.000</div>
@@ -54,7 +55,7 @@
 
 
                        <article class="product-card clearfix">
-                           <img src="https://via.placeholder.com/120x120/27ae60/ffffff?text=📱" alt="Smartphone" class="product-image">
+                           <img src="photos/dc9e2ccd-34e9-497a-a74f-907a434dccfa.jpg" alt="Smartphone" class="product-image">
                            <h3>Smartphone Flagship</h3>
                            <p>Smartphone premium dengan kamera 200MP, chipset Snapdragon terbaru, dan baterai 5000mAh fast charging.</p>
                            <div class="price">Rp 12.999.000</div>
@@ -63,7 +64,7 @@
 
 
                        <article class="product-card clearfix">
-                           <img src="https://via.placeholder.com/120x120/e74c3c/ffffff?text=🎧" alt="Headphone" class="product-image">
+                           <img src="photos/VersionTECH_ Gaming Headphones_.jpg" alt="Headphone" class="product-image">
                            <h3>Wireless Headphones</h3>
                            <p>Headphone wireless dengan teknologi noise cancelling dan kualitas audio Hi-Fi untuk pengalaman mendengar optimal.</p>
                            <div class="price">Rp 2.250.000</div>
